site/public/css/chatroom.css
.chatroom-container {
    box-shadow: 0 0 2px 0 var(--default-black);
    height: 75vh;
    display: flex;
    flex-direction: column;
}

.chatroom-header {
    padding-top: 1rem;
    padding-bottom: 0.5rem;
    box-shadow: 0 4px 2px -2px var(--standard-medium-gray);
    flex-shrink: 0;
}

.chatroom-title {
    font-size: 1.8rem;
    font-weight: bold;
    padding-left: 1rem;
}

.leave-room {
    float: right;
    margin-right: 1rem;
}

.chatroom-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    min-height: 0;
}

.messages-area {
    overflow-y: auto;
    margin-left: 1rem;
    flex: 1;
    min-height: 0;
}

.message-container {
    padding-bottom: 0.5rem;
    padding-top: 0.5rem;
    margin-right: 1rem;
}

.message-container:hover {
    background-color: var(--standard-hover-light-gray);
}

.user-icon {
    margin-right: 0.5rem;
}

.sender-name {
    font-weight: bold;
}

.timestamp {
    color: var(--subheading-underscore-grey);
    font-size: 0.8rem;
    margin-left: 5px;
}

.message-content {
    max-width: 90%;
    overflow-wrap: break-word;
    margin-left: 0.5rem;
}

.input-container {
    display: flex;
    align-items: center;
    box-shadow: 0 -2px 10px 0 rgb(0 0 0 / 5%);
    padding: 0.5rem;
    flex-shrink: 0;
    width: 100%;
}

.message-input {
    border-radius: 5px;
    outline: none;
    resize: none;
    overflow: hidden;
    font-size: 1rem;
    flex: 1;
    margin-right: 0.5rem;
    min-height: 34px;
    padding-top: 7px;
    min-width: 0;
}

.message-input-vue-wrapper {
    flex: 1;
    margin-right: 0.5rem;
    min-width: 0;
}

.message-input:focus {
    background-color: var(--standard-hover-light-gray);
}

.send-message-btn {
    align-self: stretch;
}

.message-input-vue-wrapper textarea {
    overflow-y: auto !important;
}

.chatroom-toast {
    opacity: 0;
    position: fixed;
    top: 75vh;
    left: 50%;
    transform: translateX(-50%);
    background-color: var(--standard-medium-green);
    color: var(--always-default-white);
    padding: 15px;
    border-radius: 25px;
    box-shadow: 0 0 2px 0 var(--default-black);
    text-align: center;
    transition: opacity 1s;
    z-index: 1000;
}

.chatroom-name-cell {
    text-align: left;
}

.chatroom-status-cell {
    text-align: left;
    white-space: nowrap;
}

#chatrooms-table th,
#chatrooms-table td {
    text-align: left;
    padding-left: 12px;
}

.readonly-badge {
    margin-left: -4px;
}

